Started an UI for sort form

--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
@@ -92,6 +92,11 @@
                             <i class="material-icons">casino</i>
                         </a>
                     </li>
+                    <li id="button_sort">
+                        <a title="{{ 'menu.top.filter_entries'|trans }}" href="#" data-activates="sort" class="nav-panel-menu button-collapse-right">
+                            <i class="material-icons">sort_by_alpha</i>
+                        </a>
+                    </li>
                     <li id="button_filters">
                         <a class="nav-panel-menu button-collapse-right tooltipped js-filters-action" data-position="bottom" data-delay="50" data-tooltip="{{ 'menu.top.filter_entries'|trans }}" href="#" data-activates="filters">
                             <i class="material-icons">filter_list</i>
