Add client_credentials as grant_type
Therefore, username and password are no longer needed

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

Allow to have global clients, auth through direct token or auth code and bring scopes

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

fix review

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

remove redirect uri requirement on specific clients

add back password and depreciate it

enforce state

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

Allow apps to register themselves

A handful of changes

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

change timeout values

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

set access_token lifetime to 1 year and double for refresh_token

Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/app/Resources/static/themes/material/css/various.scss
+++ b/app/Resources/static/themes/material/css/various.scss
@@ -30,3 +30,30 @@ nav .input-field input {
 .tab {
   flex: 1;
 }
+
+.slider .slides {
+  background: #00acc1;
+
+  li {
+    img {
+      background: no-repeat;
+      background-size: contain;
+      background-position: unset;
+    }
+
+    .icon {
+      width: auto;
+      height: 180px;
+    }
+
+    .icon.browser {
+      width: auto;
+      height: 100px;
+    }
+
+    .caption {
+      width: 85%;
+      left: 10%;
+    }
+  }
+}
