--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/layout.html.twig
@@ -78,8 +78,8 @@
             <li class="bold {% if currentRoute == 'import' %}active{% endif %}">
                 <a class="waves-effect" href="{{ path('import') }}">{{ 'menu.left.import'|trans }}</a>
             </li>
-            <li class="bold {% if currentRoute == 'developer' %}active{% endif %}">
-                <a class="waves-effect" href="{{ path('developer') }}">{{ 'menu.left.developer'|trans }}</a>
+            <li class="bold {% if currentRoute == 'apps' %}active{% endif %}">
+                <a class="waves-effect" href="{{ path('apps') }}">{{ 'menu.left.apps'|trans }}</a>
             </li>
             <li class="bold {% if currentRoute == 'howto' %}active{% endif %}">
                 <a class="waves-effect" href="{{ path('howto') }}">{{ 'menu.left.howto'|trans }}</a>
