--- a/src/Wallabag/CoreBundle/Resources/views/themes/common/Developer/client.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/common/Developer/client.html.twig
@@ -1,6 +1,6 @@
 {% extends "WallabagCoreBundle::layout.html.twig" %}
 
-{% block title %}{{ 'developer.client.page_title'|trans }}{% endblock %}
+{% block title %}{{ 'apps.old_client.page_title'|trans }}{% endblock %}
 
 {% block content %}
 <div class="row">
@@ -8,7 +8,7 @@
         <div class="card-panel settings">
 
             <div class="row">
-                <p>{{ 'developer.client.page_description'|trans }}</p>
+                <p>{{ 'apps.old_client.page_description'|trans }}</p>
                 {{ form_start(form) }}
                 {{ form_errors(form) }}
 
@@ -18,13 +18,7 @@
                     {{ form_widget(form.name) }}
                 </div>
 
-                <div class="input-field col s12">
-                    {{ form_label(form.redirect_uris) }}
-                    {{ form_errors(form.redirect_uris) }}
-                    {{ form_widget(form.redirect_uris) }}
-                </div>
-
-                <a href="{{ path('developer') }}" class="waves-effect waves-light grey btn">{{ 'developer.client.action_back'|trans }}</a>
+                <a href="{{ path('apps') }}" class="waves-effect waves-light grey btn">{{ 'apps.old_client.action_back'|trans }}</a>
                 {{ form_widget(form.save, {'attr': {'class': 'btn waves-effect waves-light'}}) }}
 
                 {{ form_rest(form) }}
