--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/_reading_time.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/_reading_time.html.twig
@@ -1,7 +1,7 @@
 {% set readingTime = entry.readingTime / app.user.config.readingSpeed %}
 <i class="material-icons">timer</i>
 {% if readingTime > 0 %}
-    {{ 'entry.list.reading_time_minutes_short'|trans({'%readingTime%': readingTime|round}) }}
+    <span>{{ 'entry.list.reading_time_minutes_short'|trans({'%readingTime%': readingTime|round}) }}</span>
 {% else %}
-    {{ 'entry.list.reading_time_less_one_minute_short'|trans|raw }}
+    <span>{{ 'entry.list.reading_time_less_one_minute_short'|trans|raw }}</span>
 {% endif %}
