--- a/app/Resources/static/themes/material/css/cards.scss
+++ b/app/Resources/static/themes/material/css/cards.scss
@@ -143,7 +143,7 @@ main {
   }
 }
 
-a.original {
+a.original:not(.waves-effect) {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
