--- a/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/entry.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/material/Entry/entry.html.twig
@@ -216,46 +216,48 @@
             <h1>{{ entry.title|striptags|raw }} <a href="{{ path('edit', { 'id': entry.id }) }}" title="{{ 'entry.view.edit_title'|trans }}">✎</a></h1>
         </header>
         <aside>
-            <ul class="tools">
-                <li>
-                    {% include "@WallabagCore/themes/material/Entry/_reading_time.html.twig" with {'entry': entry} only %}
-                </li>
-                <li>
-                    <i class="material-icons" title="{{ 'entry.view.created_at'|trans }}">today</i>
-                    {{ entry.createdAt|date('Y-m-d H:i') }}
-                </li>
-                {% if entry.publishedAt is not null %}
-                <li>
-                    <i class="material-icons" title="{{ 'entry.view.published_at'|trans }}">create</i>
-                    {{ entry.publishedAt|date('Y-m-d H:i') }}
-                </li>
-                {% endif %}
-                {% if entry.publishedBy is not empty %}
+            <div class="tools">
+                <ul class="stats">
                     <li>
-                        <i class="material-icons" title="{{ 'entry.view.published_by'|trans }}">person</i>
-                        {% for author in entry.publishedBy %}
-                            {{ author }}{% if not loop.last %}, {% endif %}
-                        {% endfor %}
+                        {% include "@WallabagCore/themes/material/Entry/_reading_time.html.twig" with {'entry': entry} only %}
                     </li>
-                {% endif %}
-                <li>
-                    <i class="material-icons link">link</i>
-                    <a href="{{ entry.url|e }}" target="_blank" title="{{ 'entry.view.original_article'|trans }} : {{ entry.title|striptags }}" class="tool">
-                        {{ entry.domainName|removeWww }}
-                    </a>
-                </li>
-                <li>
-                    <i class="material-icons link">comment</i>
-                    {{ 'entry.view.annotations_on_the_entry'|transchoice(entry.annotations | length) }}
-                </li>
-                <li id="list">
+                    <li>
+                        <i class="material-icons" title="{{ 'entry.view.created_at'|trans }}">today</i>
+                        {{ entry.createdAt|date('Y-m-d H:i') }}
+                    </li>
+                    {% if entry.publishedAt is not null %}
+                    <li>
+                        <i class="material-icons" title="{{ 'entry.view.published_at'|trans }}">create</i>
+                        {{ entry.publishedAt|date('Y-m-d H:i') }}
+                    </li>
+                    {% endif %}
+                    {% if entry.publishedBy is not empty %}
+                        <li>
+                            <i class="material-icons" title="{{ 'entry.view.published_by'|trans }}">person</i>
+                            {% for author in entry.publishedBy %}
+                                {{ author }}{% if not loop.last %}, {% endif %}
+                            {% endfor %}
+                        </li>
+                    {% endif %}
+                    <li>
+                        <i class="material-icons link">link</i>
+                        <a href="{{ entry.url|e }}" target="_blank" title="{{ 'entry.view.original_article'|trans }} : {{ entry.title|striptags }}" class="tool">
+                            {{ entry.domainName|removeWww }}
+                        </a>
+                    </li>
+                    <li>
+                        <i class="material-icons link">comment</i>
+                        {{ 'entry.view.annotations_on_the_entry'|transchoice(entry.annotations | length) }}
+                    </li>
+                </ul>
+                <ul class="tags">
                     {% for tag in entry.tags %}
-                        <div class="chip">
-                        <a href="{{ path('tag_entries', {'slug': tag.slug}) }}">{{ tag.label }}</a> <a href="{{ path('remove_tag', { 'entry': entry.id, 'tag': tag.id }) }}"><i class="material-icons vertical-align-middle">delete</i></a>
-                        </div>
+                        <li class="chip">
+                            <a href="{{ path('tag_entries', {'slug': tag.slug}) }}">{{ tag.label }}</a> <a href="{{ path('remove_tag', { 'entry': entry.id, 'tag': tag.id }) }}"><i class="material-icons vertical-align-middle">delete</i></a>
+                        </li>
                     {% endfor %}
-                </li>
-            </ul>
+                </ul>
+            </div>
 
             <div class="input-field nav-panel-add-tag" style="display: none">
                 {{ render(controller( "WallabagCoreBundle:Tag:addTagForm", { 'id': entry.id } )) }}
