fix 3-dots menu position
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/app/Resources/static/themes/material/css/cards.scss
+++ b/app/Resources/static/themes/material/css/cards.scss
@@ -27,7 +27,7 @@ main {
     color: #313131;
   }
 
-  .card-content .card-title {
+  .card-stacked .card-content .card-title {
     display: inline-block;
   }
 
