--- a/src/Wallabag/CoreBundle/Resources/views/themes/common/Static/about.html.twig
+++ b/src/Wallabag/CoreBundle/Resources/views/themes/common/Static/about.html.twig
@@ -106,8 +106,8 @@
                             <tr><td>hoa/zformat</td><td>BSD-3-Clause</td></tr>
                             <tr><td>htmlawed/htmlawed</td><td>GPL-2.0+ or LGPL-3.0</td></tr>
                             <tr><td>incenteev/composer-parameter-handler</td><td>MIT</td></tr>
-                            <tr><td>j0k3r/graby</td><td>AGPL-3.0</td></tr>
-                            <tr><td>j0k3r/graby-site-config</td><td>AGPL-3.0</td></tr>
+                            <tr><td>j0k3r/graby</td><td>MIT</td></tr>
+                            <tr><td>j0k3r/graby-site-config</td><td>Public domain</td></tr>
                             <tr><td>j0k3r/php-readability</td><td>Apache-2.0</td></tr>
                             <tr><td>j0k3r/safecurl</td><td>MIT</td></tr>
                             <tr><td>jdorn/sql-formatter</td><td>MIT</td></tr>
