icon mail a bit better
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/app/Resources/static/themes/material/css/article.scss
+++ b/app/Resources/static/themes/material/css/article.scss
@@ -169,7 +169,7 @@
       height: auto;
 
       li a i.material-icons {
-        margin: auto 5px auto 0;
+        margin: auto 5px auto -8px;
       }
     }
 
